fikse pom
endre pom til java17 og fjerne configurasjon for old macs